--- a/app/views/gluttonberg/admin/membership/members/edit.html.haml
+++ b/app/views/gluttonberg/admin/membership/members/edit.html.haml
@@ -1,5 +1,5 @@
 - @window_title = "Membership"
-- @page_title = "#{link_to "Membership", admin_membership_path} > #{link_to("Members", admin_members_path)} > Edit member"
+- @page_title = "#{link_to "Membership", admin_membership_root_path} > #{link_to("Members", admin_membership_members_path)} > Edit member"
 - @page_image = "/gluttonberg/images/sidebar/icon_settings.png"
 
-= render :partial => "form" , :locals => { :url => admin_member_path(@member.id) } 
+= render :partial => "form" , :locals => { :url => admin_membership_member_path(@member.id) } 
