--- a/app/views/gluttonberg/admin/membership/members/new_bulk.html.haml
+++ b/app/views/gluttonberg/admin/membership/members/new_bulk.html.haml
@@ -1,8 +1,8 @@
 - @window_title = "Membership"
-- @page_title = "#{link_to "Membership", admin_membership_path} > #{link_to("Members", admin_members_path)} > Import members"
+- @page_title = "#{link_to "Membership", admin_membership_root_path} > #{link_to("Members", admin_membership_members_path)} > Import members"
 - @page_image = "/gluttonberg/images/sidebar/icon_settings.png"
 
-= form_for "csv"  , :url => admin_members_bulk_create_path , :html => { :class => :form , :id => "uploadCSVForm" , :multipart => true } do |f| 
+= form_for "csv"  , :url => admin_membership_members_bulk_create_path , :html => { :class => :form , :id => "uploadCSVForm" , :multipart => true } do |f| 
   .left_column
     %legend
       Details
@@ -31,7 +31,7 @@
         = label_tag :invite, "Send welcome email (login details) to new member?"        
         
     %fieldset
-      = form_controls(admin_members_path)    
+      = form_controls(admin_membership_members_path)    
       #double_click_warning{  :style => "color:red;display:none;"}
         File upload in progress, please don’t navigate away from this screen. 
         %p{:style => "padding-left:170px;"}= image_tag("facebox/loading.gif")
