--- a/app/views/gluttonberg/admin/settings/stylesheets/_form.html.haml
+++ b/app/views/gluttonberg/admin/settings/stylesheets/_form.html.haml
@@ -12,7 +12,7 @@
     = f.label :slug
     = f.text_field(:slug, :id => 'page_slug')
   %fieldset
-    = f.label :css_prefix , "Target Browser"
+    = f.label :css_prefix , "Target Browser(s)"
     = f.select(:css_prefix , css_prefix_list , :include_blank => "All Browsers")
     
   %fieldset
