--- a/app/views/gluttonberg/admin/settings/stylesheets/index.html.haml
+++ b/app/views/gluttonberg/admin/settings/stylesheets/index.html.haml
@@ -1,5 +1,7 @@
 - @page_title = "#{link_to "Settings", admin_settings_path} > Stylesheets"
 - @page_image = "/gluttonberg/images/sidebar/icon_content.png"
+- css_prefix_list = [["IE6 Only" , "<!--[if eq IE 6]>"] , ["IE7 Only" , "<!--[if eq IE 7]>"] , ["IE8 Only" , "<!--[if eq IE 8]>"] , ["IE9 Only" , "<!--[if eq IE 9]>"] , ["IE6 & IE7" , "<!--[if lte IE 7]>"] , ["IE6 & IE7 & IE8" , "<!--[if lte IE 8]>"] , ["Webkit based browsers (Safari, Chrome, etc)" , "if Webkit"] , ["Firefox" , "if Gecko"]]
+
 = sub_nav do
   - if can? :manage, Gluttonberg::Stylesheet
     = nav_link('New', new_admin_stylesheet_path)
@@ -12,6 +14,7 @@
       %tr
         %th CSS
         %th URL
+        %th Target Browser(s)
         %th 
           Version          
         %th.controls Controls
@@ -22,6 +25,12 @@
             %span{:class => "#{drag_tree_drag_point_class} page" , :rel => drag_tree_row_id(stylesheet)}
             = stylesheet.name
           %td= link_to stylesheets_path(stylesheet.slug) + ".css?#{stylesheet.version}" , stylesheets_path(stylesheet.slug) + ".css?#{stylesheet.version}"  
+          %td
+            -css =  css_prefix_list.find{|c| c.last == stylesheet.css_prefix}
+            - unless css.blank?
+              = css.first
+            - else
+              All Browsers
           %td
             = stylesheet.version  
           %td.controls
