--- a/app/views/gluttonberg/admin/settings/stylesheets/_form.html.haml
+++ b/app/views/gluttonberg/admin/settings/stylesheets/_form.html.haml
@@ -1,3 +1,5 @@
+- css_prefix_list = [["IE6 Only" , "<!--[if eq IE 6]>"] , ["IE7 Only" , "<!--[if eq IE 7]>"] , ["IE8 Only" , "<!--[if eq IE 8]>"] , ["IE9 Only" , "<!--[if eq IE 9]>"] , ["IE6 & IE7" , "<!--[if lte IE 7]>"] , ["IE6 & IE7 & IE8" , "<!--[if lte IE 8]>"] , ["Webkit based browsers (Safari, Chrome, etc)" , "if Webkit"] , ["Firefox" , "if Gecko"]]
+ 	4
 
 - unless @stylesheet.blank?
   = version_listing(@stylesheet.versions , @version )
@@ -9,20 +11,15 @@
     %p
       = f.label :name
       = f.text_field(:name, :id => "page_title" , :class => "required")
-  %fieldset
+  
     %p
       = f.label :slug
       = f.text_field(:slug, :id => 'page_slug')
-  %fieldset
+  
     %p
-      = f.label :css_prefix
-      = f.text_field(:css_prefix)
-      = "For example \"<!--[if lte IE 7]>\""
-  %fieldset
-    %p
-      = f.label :css_postfix
-      = f.text_field(:css_postfix)
-      = "For example: \"<![endif]-->\" "
+      = f.label :css_prefix , "Target Browser(s)"
+      = f.select(:css_prefix , css_prefix_list , :include_blank => "All Browsers")
+  
   %fieldset
     %p
       = f.label :value , "CSS"
