Do not modify slug on edit page

--- a/app/views/gluttonberg/admin/content/page_localizations/_form.html.haml
+++ b/app/views/gluttonberg/admin/content/page_localizations/_form.html.haml
@@ -17,7 +17,7 @@
       = f.text_field(:navigation_label)
     %p
       = f.label :slug
-      = f.text_field(:slug, :id => 'page_slug')
+      = f.text_field(:slug, :id => 'page_slug' , :donotmodify => true )
       
       
     - if @page_localization.contents.length >= 1
