--- a/app/views/gluttonberg/admin/content/blogs/_form.html.haml
+++ b/app/views/gluttonberg/admin/content/blogs/_form.html.haml
@@ -1,4 +1,3 @@
-
 - unless @blog.blank?
   = version_listing(@blog.versions , @version )
 
@@ -16,7 +15,7 @@
         = f.text_field(:name, :id => "page_title" , :class => "required")
       %p
         = f.label :slug
-        = f.text_field(:slug, :id => 'page_slug')
+        = f.text_field(:slug, :id => 'page_slug' , :donotmodify => (action_name == "edit"  || action_name == "update"))
       %p
         = f.label :description,:class =>"block_label"
         = f.text_area(:description , :class => "jwysiwyg", :width => "545"  )    
