--- a/app/views/gluttonberg/admin/content/pages/_form.html.haml
+++ b/app/views/gluttonberg/admin/content/pages/_form.html.haml
@@ -11,7 +11,7 @@
         = f.text_field(:navigation_label, :class=>"medium")
         %br
         = f.label :slug
-        = f.text_field(:slug, :id => 'page_slug', :class=>"medium")
+        = f.text_field(:slug, :id => 'page_slug', :class=>"medium" , :donotmodify => (action_name == "edit"  || action_name == "update"))
         %br
       - unless @pages.empty?
         = f.label :parent_id , "Parent page"
