--- a/app/views/gluttonberg/admin/settings/users/index.html.haml
+++ b/app/views/gluttonberg/admin/settings/users/index.html.haml
@@ -2,7 +2,7 @@
 - @page_title = "#{link_to "Settings", admin_settings_path} > Users"
 - @page_image = "/gluttonberg/images/sidebar/icon_settings.png"
 = sub_nav do
-  - if can? :manage, Gluttonberg::User
+  - if can? :manage, User
     = nav_link("New", new_admin_user_path) 
   
 - if @users.empty?
@@ -12,7 +12,7 @@
     %thead
       %tr
         %th Name
-        - if can? :manage, Gluttonberg::User
+        - if can? :manage, User
           %th Type
         %th.controls Controls
     %tbody
@@ -21,12 +21,12 @@
         - i += 1
         %tr{ :class => "#{i % 2 == 0? "even" : ""}"}
           %td= user.email
-          - if can? :manage, Gluttonberg::User       
+          - if can? :manage, User       
             %td= user.role.humanize
           %td.controls
             %ul
               %li= link_to("Edit", edit_admin_user_path(user))
-              - if can? :manage, Gluttonberg::User     
+              - if can? :manage, User     
                 %li= link_to "Delete", delete_admin_user_path(user)
     
   = will_paginate(@users)
