--- a/public/gluttonberg/stylesheets/admin.css
+++ b/public/gluttonberg/stylesheets/admin.css
@@ -2682,3 +2682,12 @@ p.no_content {
   width: 100%;
   height: 500px;
 }
+
+form#list_search_form{
+  float:right !important;
+  width:225px !important;
+  padding:0px;
+  background: none;
+  border: none;
+  margin:0px;
+}
