--- a/app/views/gluttonberg/admin/content/articles/edit.html.haml
+++ b/app/views/gluttonberg/admin/content/articles/edit.html.haml
@@ -1,4 +1,14 @@
 - @page_title = "#{link_to "Content", admin_content_path} > #{link_to "Blogs", admin_blogs_path} >  #{link_to @blog.name, admin_blog_articles_path(@blog)} > Edit #{@article.title}"
 
 - @page_image = "/gluttonberg/images/sidebar/icon_content.png"
-= render :partial => "form", :locals => {:url => admin_blog_article_path(@blog, @article)}
+
+.ui-tabs-nav
+  %ul
+    - if Gluttonberg.localized? && @article.localizations &&  @article.localizations.length > 1
+      - for localization in @article.localizations
+        %li{:class => "#{ (@article_localization.locale.id ==  localization.locale.id ) ? 'ui-tabs-selected ui-state-active' : '' }"}
+          %a{:href => edit_admin_blog_article_path(@blog, @article , :localization_id => localization.id) ,:id=>"edit_content_tab",:class=>"button"}
+            = "Edit #{localization.locale.name}" 
+
+#edit_content_tab_section.ui-tabs-panel.ui-widget-content.ui-corner-bottom
+  = render :partial => "form", :locals => {:url => admin_blog_article_path(@blog, @article , :localization_id => params[:localization_id])}
