--- a/lib/generators/gluttonberg/blog/templates/articles_show.html.haml
+++ b/lib/generators/gluttonberg/blog/templates/articles_show.html.haml
@@ -34,7 +34,7 @@
             %br
        
     #new_comment
-      = form_for(:comment, :url => blog_article_comments_path(@blog.slug, @article.slug)) do |f|
+      = form_for(:comment, :url => blog_article_comments_path(current_localization_slug , @blog.slug, @article.slug)) do |f|
         %p
           = f.label :name
           %br
