--- a/lib/generators/gluttonberg/blog/templates/articles_tag.html.haml
+++ b/lib/generators/gluttonberg/blog/templates/articles_tag.html.haml
@@ -7,7 +7,7 @@
       %h2
         = link_to article.title, blog_article_path(current_localization_slug , article.blog.slug, article.slug)
         by
-        = article.author.email
+        = article.author.full_name
       %p
         = article.excerpt
   
