--- a/lib/generators/gluttonberg/resource/templates/backend_view_index.html.haml
+++ b/lib/generators/gluttonberg/resource/templates/backend_view_index.html.haml
@@ -6,6 +6,7 @@
   = nav_link('New', new_admin_<%= singular_name %>_path)
   <% if importable? %>
   = nav_link('Import', admin_<%= plural_name %>_import_path)
+  = nav_link('Export', admin_<%= plural_name %>_export_path)
   <% end %>
 <% unless draggable? %>
 - if !@<%= plural_name %>.blank? || !params[:query].blank?
