--- a/app/views/layouts/bare.html.haml
+++ b/app/views/layouts/bare.html.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag "/gluttonberg/javascripts/jquery-1.4.2.min.js" , "/gluttonberg/javascripts/gb_login.js"
 
     = stylesheet_link_tag "/gluttonberg/stylesheets/admin"
+    = custom_stylesheet_link_tag
     
   %body{:id => "#{@page_id}"}
     
