--- a/app/views/gluttonberg/admin/membership/members/_form.html.haml
+++ b/app/views/gluttonberg/admin/membership/members/_form.html.haml
@@ -24,6 +24,17 @@
         = f.label :bio, "Bio"
         = f.text_area(:bio, :class => "large ")
     
+    - if action_name == "edit"
+      %fieldset
+        %p
+          = f.label :password
+          = f.password_field(:password, :class => "large ")
+      
+      %fieldset
+        %p
+          = f.label :password_confirmation
+          = f.password_field(:password_confirmation, :class => "large ")    
+    
     %fieldset
       %p
         = f.label :image
