show page fix in resource generator

--- a/lib/generators/gluttonberg/resource/templates/public_view_show.html.haml
+++ b/lib/generators/gluttonberg/resource/templates/public_view_show.html.haml
@@ -3,5 +3,5 @@
   
 <% attributes.each do |attribute| -%>
 %p
-  = @<%= singular_name %>.<%= attribute.name.humanize %>
+  = @<%= singular_name %>.<%= attribute.name %>.humanize
 <% end %>
