--- a/lib/generators/gluttonberg/resource/templates/backend_view_show.html.haml
+++ b/lib/generators/gluttonberg/resource/templates/backend_view_show.html.haml
@@ -14,7 +14,7 @@
     %dl
     <% attributes.each do |attribute| -%>
   %dt <%= attribute.name %>
-      %dd #{@<%= singular_name %>.<%= attribute.name.humanize %>}
+      %dd #{@<%= singular_name %>.<%= attribute.name %>.humanize}
     <% end %>
 
   %dl.meta
