--- a/app/views/gluttonberg/admin/content/articles/index.html.haml
+++ b/app/views/gluttonberg/admin/content/articles/index.html.haml
@@ -31,7 +31,7 @@
           %td.controls
             %ul
               %li
-                = link_to "Comments", admin_blog_article_comments_path(@blog.slug, article)
+                = link_to "Comments", admin_blog_article_comments_path(@blog.id, article)
               %li
                 = link_to "Edit", edit_admin_blog_article_path(@blog, article)
               - if can? :destroy , Gluttonberg::Article  
