Fix blogs to support both versions of gluttonberg (localised and non-localised)

--- a/lib/generators/gluttonberg/blog/templates/articles_index.html.haml
+++ b/lib/generators/gluttonberg/blog/templates/articles_index.html.haml
@@ -5,7 +5,10 @@
   - @articles.each do |article|
     .article
       %h2
-        = link_to article.title, blog_article_path(current_localization_slug ,@blog.slug, article.slug)
+        - if Gluttonberg.localized?
+          = link_to article.title, blog_article_path(current_localization_slug ,@blog.slug, article.slug)
+        - else
+          = link_to article.title, blog_article_path(:blog_id => @blog.slug, :id => article.slug)
         by
         = article.author.full_name
       %p
