--- a/lib/generators/gluttonberg/blog/templates/articles_tag.html.haml
+++ b/lib/generators/gluttonberg/blog/templates/articles_tag.html.haml
@@ -5,7 +5,10 @@
   - @articles.each do |article|
     .article
       %h2
-        = link_to article.title, blog_article_path(current_localization_slug , article.blog.slug, article.slug)
+        - if Gluttonberg.localized?
+          = link_to article.title, blog_article_path(current_localization_slug , article.blog.slug, article.slug)
+        - else
+          = link_to article.title, blog_article_path(:blog_id => @blog.slug, :id => article.slug)
         by
         = article.author.full_name
       %p
@@ -13,4 +16,9 @@
   
   .tags_cloud
     - tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class|
-      = link_to tag.name, articles_by_tag_path(current_localization_slug ,tag.name), :class => css_class
+      
+      - if Gluttonberg.localized?
+        = link_to tag.name, articles_by_tag_path(current_localization_slug ,tag.name), :class => css_class
+      - else
+        = link_to tag.name, articles_by_tag_path(:tag => tag.name), :class => css_class
+      
