--- a/app/views/gluttonberg/public/pages/sitemap.html.haml
+++ b/app/views/gluttonberg/public/pages/sitemap.html.haml
@@ -1,8 +1,11 @@
-- s = SitemapGenerator::Interpreter.run
-- Gluttonberg::Sitemap.links.each do |group , pages|
-  %ul
-    %li= group.humanize
-    %li
-      %ul
-        - pages.each do |page|
-          %li= link_to page[:title] , page[:path]
+- begin
+  - s = SitemapGenerator::Interpreter.run
+  - Gluttonberg::Sitemap.links.each do |group , pages|
+    %ul
+      %li= group.humanize
+      %li
+        %ul
+          - pages.each do |page|
+            %li= link_to page[:title] , page[:path]
+- rescue
+  Sitemap file not found
