--- a/app/views/layouts/gluttonberg.html.haml
+++ b/app/views/layouts/gluttonberg.html.haml
@@ -77,7 +77,7 @@
             %a.nav_trigger{ :href => "javascript:;" }
             %ul.subnavigation
               %li
-                = active_link_to("List", admin_membership_members_path, :title => "Members")
+                = active_link_to("All Members", admin_membership_members_path, :title => "All Members")
               %li
                 = active_link_to("Groups", admin_membership_groups_path, :title => "Groups")
           
