--- a/app/views/gluttonberg/admin/membership/main/index.html.haml
+++ b/app/views/gluttonberg/admin/membership/main/index.html.haml
@@ -3,7 +3,7 @@
 %ul#iconNav
   
   %li
-    = link_to("Members", admin_membership_members_path, :id => "membersNav" , :title => "Members")
+    = link_to("All Members", admin_membership_members_path, :id => "membersNav" , :title => "All Members")
   %li
     = link_to("Groups", admin_membership_groups_path, :id => "groupsNav", :title => "Groups")
   
