--- a/app/views/gluttonberg/admin/membership/members/index.html.haml
+++ b/app/views/gluttonberg/admin/membership/members/index.html.haml
@@ -1,5 +1,5 @@
 - @window_title = "Membership"
-- @page_title = "#{link_to "Membership", admin_membership_root_path} > Members"
+- @page_title = "#{link_to "Membership", admin_membership_root_path} > All Members"
 - @page_image = "/assets/sidebar/icon_settings.png"
 = sub_nav do
   = nav_link("New", new_admin_membership_member_path) 
