--- a/app/views/layouts/bare.html.haml
+++ b/app/views/layouts/bare.html.haml
@@ -4,7 +4,7 @@
     %title= "- #{@page_title}" if @page_title
     %meta{"http-equiv" => "Content-Type", :content => "text/html;charset=utf-8" }/
 
-    = javascript_include_tag "jquery-1.4.2.min.js" , "gb_login.js"
+    = javascript_include_tag "jquery-1-4-2-min" , "gb_login"
 
     = stylesheet_link_tag "admin"
     = custom_stylesheet_link_tag
