--- a/app/views/layouts/gluttonberg.html.haml
+++ b/app/views/layouts/gluttonberg.html.haml
@@ -9,10 +9,10 @@
     
     = custom_stylesheet_link_tag
     
-    = javascript_include_tag "jquery-1.4.2.min.js" , "jquery.dimensions.min.js" , "jquery-ui-1.8.1.custom.min.js" , "jquery.validate.js" , "jquery.dragTree.js" , "rails" , "jquery.tagarea.js" , "jeditable" , "ajaxfileupload" , "expander.js" , "jquery.ui.datetimepicker.min.js"
+    = javascript_include_tag "jquery-1-4-2-min" , "jquery-dimensions-min" , "jquery-ui-1-8-1-custom-min" , "jquery-validate" , "jquery-dragTree" , "rails" , "jquery-tagarea" , "jeditable" , "ajaxfileupload" , "expander" , "jquery-ui-datetimepicker-min"
     
-    = javascript_include_tag "jcrop/js/jquery.Jcrop.min.js"
-    = stylesheet_link_tag "jcrop/css/jquery.Jcrop.css"
+    = javascript_include_tag "jcrop/js/jquery-Jcrop-min"
+    = stylesheet_link_tag "jcrop/css/jquery-Jcrop"
     
     = wysiwyg_js_css_link_tag
     
